# SDU-Machine-Learning-And-Pattern-Recognition

./: .gitignore  readme.md
experiment/instruction/: README.md  main.py  pdf_metadata_summary.md  pyproject.toml
experiment/instruction/marker_output/experiment_1/ex1/: ex1.md  ex1_meta.json
experiment/instruction/marker_output/experiment_2/ex2/: ex2.md  ex2_meta.json
experiment/instruction/marker_output/experiment_3/ex3/: ex3.md  ex3_meta.json
experiment/instruction/marker_output/experiment_4/ex4/: ex4.md  ex4_meta.json
experiment/instruction/marker_output/experiment_5/ex5/: ex5.md  ex5_meta.json
experiment/instruction/marker_output/experiment_5/数据预处理实验手册/: 数据预处理实验手册.md  数据预处理实验手册_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning00_admin/: machine_learning00_admin.md  machine_learning00_admin_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning01_overview/: machine_learning01_overview.md  machine_learning01_overview_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning02_linear/: machine_learning02_linear.md  machine_learning02_linear_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning03_gradient_decent/: machine_learning03_gradient_decent.md  machine_learning03_gradient_decent_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning04_pca/: machine_learning04_pca.md  machine_learning04_pca_meta.json
experiment/instruction/marker_output/project_root_text/machine_learning05_lda/: machine_learning05_lda.md  (+1 more)
(+19 files in other folders)
